[gd_scene load_steps=7 format=3 uid="uid://c3rm07s4x32g1"]

[ext_resource type="Script" uid="uid://cdsdrvoen8ypb" path="res://Desk.gd" id="1_kv1ut"]
[ext_resource type="Script" uid="uid://c75q6vldg7hpa" path="res://timer.gd" id="2_0raqs"]
[ext_resource type="Texture2D" uid="uid://h4xvxee6bly3" path="res://assets/sprites/background.png" id="2_ihjj6"]
[ext_resource type="PackedScene" uid="uid://bp2fuetubenyg" path="res://insects/nav_ant.tscn" id="4_vypyt"]
[ext_resource type="Texture2D" uid="uid://jpf8unsprasp" path="res://assets/sprites/leaf.png" id="5_g3mx1"]
[ext_resource type="PackedScene" uid="uid://cb1l1drvdtd21" path="res://shop.tscn" id="6_b6rpr"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_kv1ut")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(0.68, 0.68)
texture = ExtResource("2_ihjj6")
flip_h = true

[node name="Shop" parent="." instance=ExtResource("6_b6rpr")]

[node name="Clicker" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 536.0
offset_top = 79.0
offset_right = 613.0
offset_bottom = 110.0
text = "Count +1"

[node name="ResourceCount" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 549.0
offset_top = 29.0
offset_right = 589.0
offset_bottom = 52.0
text = "Ants"

[node name="Upgrade" type="Button" parent="."]
offset_left = 61.0
offset_top = 355.0
offset_right = 136.0
offset_bottom = 386.0
text = "Upgrade"

[node name="UpgradeCost" type="Label" parent="Upgrade"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -26.0
offset_top = -62.0
offset_right = 102.0
offset_bottom = -39.0
text = "Cost to upgrade:"

[node name="UpgradeStatus" type="Label" parent="Upgrade"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -16.0
offset_top = 73.0
offset_right = 101.0
offset_bottom = 96.0
text = "upgrade status"

[node name="Idle" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 1063.0
offset_top = 374.0
offset_right = 1189.0
offset_bottom = 405.0
text = "Buy idle"

[node name="IdleCost" type="Label" parent="Idle"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -19.0
offset_top = -63.0
offset_right = 171.0
offset_bottom = -40.0
text = "Generating X per second"

[node name="IdleStatus" type="Label" parent="Idle"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 24.0
offset_top = 74.0
offset_right = 104.0
offset_bottom = 97.0
text = "idle status"

[node name="Timer" type="Timer" parent="."]
autostart = true
script = ExtResource("2_0raqs")

[node name="Ants" type="Node2D" parent="."]

[node name="NavAnt" parent="Ants" instance=ExtResource("4_vypyt")]
move_speed = 300.0
loop_path = true

[node name="Sprite2D" parent="Ants/NavAnt/CharacterBody2D" index="0"]
flip_h = true

[node name="Path2D" parent="Ants/NavAnt" index="1"]
position = Vector2(86, 585)

[node name="Sprite2D" type="Sprite2D" parent="Ants/NavAnt/Path2D/AntPath" index="0"]
visible = false
texture = ExtResource("5_g3mx1")

[connection signal="pressed" from="Clicker" to="." method="_on_clicker_pressed"]
[connection signal="pressed" from="Upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="Idle" to="." method="_on_idle_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="Ants/NavAnt"]
